--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
     "homepage": "http://friendsofsymfony.github.com",
     "require": {
         "php": "^7.2 || ^8",
-        "friendsofsymfony/oauth2-php": "~1.1",
+        "friendsofsymfony/oauth2-php": "dev-symfony-6",
         "symfony/dependency-injection": "^4.4 || ^5.1 || ^6",
         "symfony/framework-bundle": "^4.4 || ^5.1 || ^6",
         "symfony/security-bundle": "^4.4 || ^5.1 || ^6",
@@ -43,6 +43,12 @@
         "symfony/security-core": "^4.4 || ^5.1 || ^6",
         "symfony/yaml": "^4.4 || ^5.1 || ^6"
     },
+    "repositories": [
+        {
+            "type": "git",
+            "url": "https://github.com/mautic/oauth2-php"
+        }
+    ],
     "conflict": {
         "twig/twig": "<1.40 || >=2.0,<2.9"
     },
